Sorgente/.apex/src/objects/Pricebook2.object
<CustomObject>
    <fields>
        <fullName>Data_attivazione__c</fullName>
        <label>Data attivazione</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_termine__c</fullName>
        <label>Data termine</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Esclusivit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Esclusività</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Punti_Consiglio_SS__c</fullName>
        <label>Punti Consiglio SS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tipo_Listino__c</fullName>
        <label>Tipo listino</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Punti consiglio</fullName>
                </value>
                <value>
                    <fullName>Acquisto</fullName>
                </value>
                <value>
                    <fullName>Libero</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Price_Books</fullName>
        <columns>PRICEBOOK2.NAME</columns>
        <columns>PRICEBOOK2.DESCRIPTION</columns>
        <columns>PRICEBOOK2.LAST_UPDATE</columns>
        <columns>PRICEBOOK2.IS_ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <label>All Price Books</label>
    </listViews>
    <sharingModel>ReadSelect</sharingModel>
</CustomObject>